# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added http-slowloris-check script which checks if the server is vulnerable
  to a Slowloris DoS attack in a safe way. [Aleksandar Nikolic]

o Removed pos_scan scan engine as the old implementation of RPC grind was the
  last scan type to use it. [Hani Benhabiles] 

o [NSE] Replaced old rpc grind implementation with a new NSE based implementation
  for easier maintainability and improved performance. [Hani Benhabiles] 

o [NSE] Added broadcast-pim-discovery script which discovers routers that are
  running PIM (Protocol Independant Multicast).  [Hani Benhabiles]

o [NSE] Added mtrace script which queries for the multicast path from a source
  to a destination host. [Hani Benhabiles]

o [NSE] Added broadcast-eigrp-discovery script which does network discovery and
  information gathering through Cisco's EIGRP protocol. [Hani Benhabiles]

o [NSE] Added eigrp.lua library which supports parsing and generating a small subset
  of Cisco's EIGRP packets. [Hani Benhabiles]

o [NSE] Added llmnr-resolve script which resolves a hostname by using the LLMNR
  (Link-Local Multicast Name Resolution) protocol.  [Hani Benhabiles]

o [NSE] Added broadcast-igmp-discovery script which discovers and outputs
  interesting information from targets that have multicast groups memberships.
  [Hani Benhabiles]

o Scripts can now return a structured name-value table so that results
  are queryable from XML output. Scripts can return a string as before,
  or a table, or a table and a string. In this last case, the table will
  go to XML output and the string will go to screen output.
  [Daniel Miller, David Fifield, Patrick Donnelly]

o [NSE] Added JDWP library, jdwp-info, jdwp-exec and jdwp-inject scripts and
  needed classes. [Aleksandar Nikolic]

o [NSE] Added a BJNP library and the scripts broadcast-bjnp-discover and
  bjnp-discover. [Patrik Karlsson]

o [NPING] Nping now prints out an error and exists when the user tries to use